--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     world were able to download it.
                 </p>
 
-                <p> Some could register their phone numbers and use it fully with the ability to download videos, others couldn't
+                <p> DAMNNN could register their phone numbers and use it fully with the ability to download videos, others couldn't
                     and were limited to streaming. But still, Go wasn't yet officially announced. Now it is, well at least
                     in beta, and the first official country Go is available in is India. Users can download it if they want
                     to consume content on YouTube in a data-conscious way.
